# wirerifter

./: .gitignore  LICENSE  README.md  metadata.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/: MainActivity.kt
app/src/main/java/com/example/data/database/: Daos.kt  Entities.kt  WireRifterDatabase.kt
app/src/main/java/com/example/data/fingerprint/: OsFingerprintEngine.kt
app/src/main/java/com/example/data/repository/: NetworkRepository.kt
app/src/main/java/com/example/services/: WireRifterVpnService.kt
app/src/main/java/com/example/ui/screens/: AnalysisScreen.kt  DevicesScreen.kt  InterfaceSelectionScreen.kt  MonitorScreen.kt  StatisticsScreen.kt  TerminalScreen.kt  VaultScreen.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/example/ui/viewmodel/: WireRifterViewModel.kt
app/src/main/java/com/example/utils/: PacketAnalyzerJni.kt
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: lib.rs
app/src/main/rust/src/analyzer/: credential_leak.rs  dns_intel.rs  entropy_eval.rs  heuristics.rs  mod.rs  packet_parser.rs  scan_detector.rs
app/src/main/rust/src/db/: mod.rs  sqlite_persistence.rs
app/src/main/rust/src/sniffer/: fault_isolation.rs  mod.rs  thread_pool.rs
app/src/test/java/com/example/: ExampleRobolectricTest.kt  GreetingScreenshotTest.kt
docs/: ANDROID_APP.md  ARCHITECTURE.md  README.md  RUST_ENGINE.md  TESTING.md
gradle/: libs.versions.toml
tests/: run_all.ps1  run_all.sh
