[package]
name = "packet_analyzer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
